[package]
name = "thinclaw-channels"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-channels-core = { version = "0.1.0", path = "../thinclaw-channels-core" }
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
anyhow = { workspace = true }
axum = "0.8"
async-trait = { workspace = true }
base64 = "0.22"
chrono = { workspace = true }
ed25519-dalek = { version = "2", features = ["std"] }
futures = { workspace = true }
fs4 = "0.6"
hmac = "0.13"
hex = "0.4"
jsonwebtoken = "9"
libc = "0.2"
rand = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream", "http2"] }
regex = "1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
sha1 = "0.11"
subtle = "2"
thiserror = { workspace = true }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-media = { version = "0.1.0", path = "../thinclaw-media" }
thinclaw-safety = { version = "0.1.0", path = "../thinclaw-safety" }
thinclaw-secrets = { version = "0.1.0", path = "../thinclaw-secrets", default-features = false }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
tokio = { version = "1", features = ["fs", "net", "process", "rt", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
tower = { version = "0.5", features = ["limit", "util"] }
urlencoding = "2"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "36.0.12", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"], optional = true }
wasmtime-wasi = { version = "36.0.12", optional = true }
dirs = "6"
lru = "0.18.0"
nostr-sdk = { version = "0.44.1", default-features = false, features = ["nip04", "nip59"], optional = true }

[features]
default = []
wasm-runtime = ["dep:wasmtime", "dep:wasmtime-wasi"]
nostr = ["dep:nostr-sdk"]

[dev-dependencies]
tempfile = "3"
