[package]
name = "thinclaw-client"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Typed async Rust client for driving a ThinClaw gateway (chat, streaming, threads, approvals)."

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls-native-roots"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["rt", "macros", "time"] }
futures = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = { workspace = true }

[dev-dependencies]
# Contract test only: assert the client's wire DTOs stay compatible with the
# gateway's real SseEvent without a runtime dependency on the gateway crate.
thinclaw-gateway = { path = "../thinclaw-gateway" }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "chat_loop"
path = "examples/chat_loop.rs"
