[package]
name = "thinclaw-config"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = { version = "0.10", features = ["serde"] }
thinclaw-settings = { version = "0.1.0", path = "../thinclaw-settings" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-runtime-contracts = { version = "0.1.0", path = "../thinclaw-runtime-contracts" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = "0.1"
