[package]
name = "thinclaw-config"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true }
dirs = "6"
sha2 = "0.11"
ratatui = "0.30.0"
serde = { workspace = true }
serde_json = { workspace = true }
secrecy = { version = "0.10", features = ["serde"] }
thinclaw-branding = { version = "0.1.0", path = "../thinclaw-branding" }
thinclaw-settings = { version = "0.1.0", path = "../thinclaw-settings" }
thinclaw-channels = { version = "0.1.0", path = "../thinclaw-channels", optional = true }
thinclaw-channels-core = { version = "0.1.0", path = "../thinclaw-channels-core" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-runtime-contracts = { version = "0.1.0", path = "../thinclaw-runtime-contracts" }
thinclaw-safety = { version = "0.1.0", path = "../thinclaw-safety" }
thinclaw-secrets = { version = "0.1.0", path = "../thinclaw-secrets" }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thinclaw-workspace = { version = "0.1.0", path = "../thinclaw-workspace" }
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
tracing = { workspace = true }

[features]
default = []
browser = []
nostr = ["dep:thinclaw-channels", "thinclaw-channels/nostr"]
voice = []
