[package]
name = "thinclaw-context"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
serde = { workspace = true }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }

[dev-dependencies]
tempfile = "3"
