[package]
name = "thinclaw-db"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-agent = { version = "0.1.0", path = "../thinclaw-agent" }
thinclaw-experiments = { version = "0.1.0", path = "../thinclaw-experiments" }
thinclaw-history = { version = "0.1.0", path = "../thinclaw-history" }
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thinclaw-workspace = { version = "0.1.0", path = "../thinclaw-workspace" }
uuid = { version = "1", features = ["v4", "serde"] }
