[package]
name = "thinclaw-db"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.14", optional = true }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication"] }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
refinery = { version = "0.8", features = ["tokio-postgres"], optional = true }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring"] }
rustls-native-certs = { version = "0.8", optional = true }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-agent = { version = "0.1.0", path = "../thinclaw-agent" }
thinclaw-experiments = { version = "0.1.0", path = "../thinclaw-experiments" }
thinclaw-history = { version = "0.1.0", path = "../thinclaw-history" }
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thinclaw-workspace = { version = "0.1.0", path = "../thinclaw-workspace" }
tokio = { version = "1", features = ["time", "fs"], optional = true }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
tokio-postgres-rustls = { version = "0.13", optional = true }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
postgres = [
    "thinclaw-types/postgres",
    "dep:deadpool-postgres",
    "dep:pgvector",
    "dep:refinery",
    "dep:rustls",
    "dep:rustls-native-certs",
    "dep:tokio-postgres",
    "dep:tokio-postgres-rustls",
    "rust_decimal/db-tokio-postgres",
]
libsql = [
    "thinclaw-types/libsql",
    "dep:libsql",
    "dep:tokio",
]
