[package]
name = "thinclaw-experiments"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
blake3 = "1"
chrono = { workspace = true }
regex = "1"
serde = { workspace = true }
serde_json = { workspace = true }
thinclaw-history = { version = "0.1.0", path = "../thinclaw-history" }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
