[package]
name = "thinclaw-gateway"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
axum = "0.8"
async-trait = { workspace = true }
base64 = "0.22"
blake3 = "1"
chrono = { workspace = true }
fs4 = "0.6"
futures = { workspace = true }
hex = "0.4"
ipnet = "2"
rand = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
subtle = "2"
thinclaw-channels-core = { version = "0.1.0", path = "../thinclaw-channels-core" }
thinclaw-experiments = { version = "0.1.0", path = "../thinclaw-experiments" }
thinclaw-history = { version = "0.1.0", path = "../thinclaw-history" }
thinclaw-identity = { version = "0.1.0", path = "../thinclaw-identity" }
thinclaw-llm-core = { version = "0.1.0", path = "../thinclaw-llm-core" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-safety = { version = "0.1.0", path = "../thinclaw-safety" }
thinclaw-settings = { version = "0.1.0", path = "../thinclaw-settings" }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4", "serde"] }

[features]
# Derive utoipa schemas for the v1 mobile-contract DTOs (chat, jobs, status,
# SSE/WS envelopes) so hosts can export an OpenAPI document.
openapi = [
    "dep:utoipa",
    "thinclaw-tools-core/openapi",
    "thinclaw-types/openapi",
]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio = { version = "1", features = ["macros", "rt"] }
