[package]
name = "thinclaw-history"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
chrono = { workspace = true }
rust_decimal = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
