[package]
name = "thinclaw-identity"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-safety = { path = "../thinclaw-safety" }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
