[package]
name = "thinclaw-identity"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thinclaw-safety = { version = "0.1.0", path = "../thinclaw-safety" }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
