[package]
name = "thinclaw-llm-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
thinclaw-types = { path = "../thinclaw-types" }
async-trait = "0.1"
futures = "0.3"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
