[package]
name = "thinclaw-llm-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
async-trait = { workspace = true }
futures = { workspace = true }
rust_decimal = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
hex = "0.4"
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
