[package]
name = "thinclaw-media"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
futures = "0.3"
mime_guess = "2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
pdf-extract = { version = "0.7", optional = true }
regex = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[features]
default = []
document-extraction = ["dep:pdf-extract", "dep:regex", "dep:zip"]
