[package]
name = "thinclaw-media"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
futures = { workspace = true }
mime_guess = "2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
pdf-extract = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = { workspace = true }
tokio = { version = "1", features = ["fs", "io-util", "process", "rt", "macros", "time"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[features]
default = []
document-extraction = ["dep:pdf-extract", "dep:regex", "dep:zip"]
