[package]
name = "thinclaw-media"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
futures = { workspace = true }
mime_guess = "2.0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
pdf-extract = { version = "0.12", optional = true }
regex = { version = "1", optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.11"
hex = "0.4"
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = { workspace = true }
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-util", "net", "process", "rt", "macros", "time"] }
tracing = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

[features]
default = []
document-extraction = ["dep:pdf-extract", "dep:regex", "dep:zip"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
