[package]
name = "thinclaw-platform"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dirs = "6"
iana-time-zone = "0.1"
tokio = { version = "1", features = ["process"] }
tracing = "0.1"
