[package]
name = "thinclaw-platform"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { workspace = true }
chrono-tz = "0.10"
dirs = "6"
fs4 = "0.6"
iana-time-zone = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["io-util", "macros", "process", "rt", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
] }

[dev-dependencies]
tempfile = "3"
