[package]
name = "thinclaw-runtime-contracts"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
schemars = { version = "0.8", features = ["chrono"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc", features = ["derive", "serde", "serde_json", "chrono"], optional = true }

[features]
default = []
schema = ["dep:schemars"]
specta = ["dep:specta"]
