[package]
name = "thinclaw-runtime-contracts"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
chrono = { workspace = true }
schemars = { version = "0.8", features = ["chrono"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { version = "2.0.0-rc", features = ["derive", "serde", "serde_json", "chrono"], optional = true }

[features]
default = []
schema = ["dep:schemars"]
specta = ["dep:specta"]

[[example]]
name = "export_contracts"
required-features = ["schema"]
