[package]
name = "thinclaw-safety"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
aho-corasick = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
jsonschema = "0.18"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
unicode-normalization = "0.1"
url = "2"
