[package]
name = "thinclaw-settings"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-llm-core = { version = "0.1.0", path = "../thinclaw-llm-core" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "1.1"
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
