[package]
name = "thinclaw-tools-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
thinclaw-types = { path = "../thinclaw-types" }
async-trait = "0.1"
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
