[package]
name = "thinclaw-tools-core"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
async-trait = { workspace = true }
chrono = { workspace = true }
rust_decimal = { version = "1", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["sync"] }
reqwest = { version = "0.12", default-features = false }
tracing = { workspace = true }
uuid = { version = "1", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
