[package]
name = "thinclaw-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.14", optional = true }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-llm-core = { version = "0.1.0", path = "../thinclaw-llm-core" }
thinclaw-secrets = { version = "0.1.0", path = "../thinclaw-secrets", default-features = false }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
tracing = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "36", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"] }

[dev-dependencies]
secrecy = "0.10"

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
libsql = ["dep:libsql"]
