[package]
name = "thinclaw-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
deadpool-postgres = { version = "0.14", optional = true }
futures = "0.3"
hex = "0.4"
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication"] }
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.38.2"
thinclaw-llm-core = { version = "0.1.0", path = "../thinclaw-llm-core" }
thinclaw-config = { version = "0.1.0", path = "../thinclaw-config" }
thinclaw-platform = { version = "0.1.0", path = "../thinclaw-platform" }
thinclaw-secrets = { version = "0.1.0", path = "../thinclaw-secrets", default-features = false }
thinclaw-tools-core = { version = "0.1.0", path = "../thinclaw-tools-core" }
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"], optional = true }
tracing = "0.1"
unicode-normalization = "0.1"
url = "2"
urlencoding = "2"
uuid = { version = "1", features = ["v4", "serde"] }
wasmtime = { version = "36", default-features = false, features = ["component-model", "cranelift", "runtime", "async", "cache", "std", "parallel-compilation"] }
wasmtime-wasi = "36"
wasmparser = "0.220"
html-to-markdown-rs = { version = "2.3", optional = true }
readabilityrs = { version = "0.1.2", optional = true }

[dev-dependencies]
secrecy = "0.10"
tempfile = "3"

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]
libsql = ["dep:libsql"]
html-to-markdown = ["dep:html-to-markdown-rs", "dep:readabilityrs"]
