[package]
name = "thinclaw-workspace"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thinclaw-types = { version = "0.1.0", path = "../thinclaw-types" }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
